Follow up bug 1024496 and changeset bb1f71e71f15 - update notoverflowing and call _updateScrollButtonsDisabledState from our overflow/underflow listeners and hide both indicators permanently when in multirow.

--- a/addon/chrome/content/overlay/browsr.css
+++ b/addon/chrome/content/overlay/browsr.css
@@ -336,4 +336,5 @@ so display: none !important; does not hide the button */
 .tabbrowser-arrowscrollbox[flowing="multibar"] > .arrowscrollbox-overflow-start-indicator,
 .tabbrowser-arrowscrollbox[flowing="multibar"] > .arrowscrollbox-overflow-end-indicator {
   margin-bottom: 0px;
+  visibility: collapse;
 }
